5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1644_2703.log
== SUBMITION (2019-04-09 16:23:55) 
-- CODE:
idade = int(input())
if (idade >= 18)
 mensagem = "eleitor"
else 
 mensagem = "nao_eleitor"
-- EXECUTION TIME:
0.134825
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >= 18)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:24:13) 
-- CODE:
idade = int(input())
if (idade >= 18)
 mensagem = "eleitor"
else 
 mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.200646
-- ERROR:
  File "/home/codebench/codes/1644/2703/main.py", line 2
    if (idade >= 18)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:24:52) 
-- CODE:
idade = int(input())
if (idade >= 18):
 mensagem = "eleitor"
else:
 mensagem = "nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.167062
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
